限定依赖模块 object-expression-parser 的版本
新版本 object-expression-parser 0.2.0 不兼容 0.1.0 版本

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/unicreators/sql-criteria-parser#readme",
   "dependencies": {
-    "object-expression-parser": "^0.1.0"
+    "object-expression-parser": "~0.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.2.0"
   }
 }
